# IMX6Q_VPU_Module

./: CMakeLists.txt  CMakeLists.txt~  KCF解析.doc  README.md  说明.doc
include/: Communication.h  DFT.h  File_Queue.h  Init_dev.h  KCF_Track.h  NCC_Track.h  TLD.h  Variable_Function.h  Video_CharSuperimposition.h  ffttools.h  fhog.h  recttools.h  tld_utils.h  vpu_test.h
lib/: libavdevice.so.58.4.100  libavutil.so.56.18.100  libjpeg.la  libjpeg.so.8  libpostproc.so.55.2.100  libswresample.so.3.2.100  libswscale.so.5.2.100
src/: Communication.c  DFT.c  FerNNClassifier.cpp  File_Queue.c  Filter_Algorithm.c  Frame_Difference_Method.c  Init_dev.c  KCF_Track.c  LKTracker.cpp  NCC_Track.c  RunLength_Algorithm.c  TLD.cpp  VPU_Camera.c  Variable_Function.c  Variable_Function.cpp  Video_CharSuperimposition.c  capture.c  enc.c  ffttools.c  fhog.c  main.c  main.cpp  recttools.c  run_tld.cpp  utils.c
